--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,11 @@
+auxiliary.org-netbeans-modules-javascript-nodejs.run_2e_enabled=false
+browser.autorefresh.Chrome=true
+browser.highlightselection.Chrome=true
+browser.run=true
 file.reference.Kecske_Kaposzta_Farkas-public_html=public_html
 file.reference.Kecske_Kaposzta_Farkas-test=test
 files.encoding=UTF-8
 site.root.folder=${file.reference.Kecske_Kaposzta_Farkas-public_html}
+start.file=index.html
 test.folder=${file.reference.Kecske_Kaposzta_Farkas-test}
+web.context.root=/Kecske_Kaposzta_Farkas
